[package]
name = "mikrotik-exp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
derive_more = { version = "2.0.0", features = ["from", "display", "debug"] }
clap = { version = "4.5.17", features = ["cargo", "derive"] }
mikrotik-rs = "0.4.1"
